<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcomeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/welcomeMessage"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/welcomeImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/welcome_image_description"
        android:scaleType="fitCenter"
        android:src="@drawable/gaming_image"
        app:layout_constraintBottom_toTopOf="@+id/exploreGamingTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage"
        app:shapeAppearanceOverlay="@style/rounded_edges" />

    <TextView
        android:id="@+id/exploreGamingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/explore_the_gamin_world"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeImageView" />

    <TextView
        android:id="@+id/exploreGamingMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/explore_the_gamin_world_message"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exploreGamingTitle" />

    <Button
        android:id="@+id/welcomeLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:width="250dp"
        android:height="60dp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/purple"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exploreGamingMessage" />

    <Button
        android:id="@+id/welcomeRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="60dp"
        android:width="250dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/purple"
        android:padding="10dp"
        android:text="@string/join"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLoginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>